Fix inconsistent gap

--- a/administrator/templates/atum/scss/pages/_com_cpanel.scss
+++ b/administrator/templates/atum/scss/pages/_com_cpanel.scss
@@ -129,6 +129,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
+    width: 100%;
     min-height: 130px;
     padding: 0 1rem;
     font-size: .875rem;
